[package]
name = "leetcode-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leetcode_prelude = { git = "https://github.com/uier/leetcode_prelude.git", branch = "fix/nested-array" }
proconio = "0.5.0"
